# work_with_hh_ru_api

./: main.py  pyproject.toml
data/: vacancies.json
src/: Vacancy.py  file_manager.py  hh.py
