[tool.poetry]
name = "coursework2"
version = "0.1.0"
description = ""
authors = ["Gosha <bakiyev3005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
